--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,17 +1,18 @@
 @mixin font-face($font-family, $url, $weight) {
-    @font-face {
-        font-family: "#{$font-family}";
-        src: url('../fonts/#{$url}.woff2') format("woff2"),
-        url('../fonts/#{$url}.woff') format("woff");
-        font-weight: #{$weight};
-        font-display: swap;
-        font-style: normal;
-    }
+	@font-face {
+		font-family: '#{$font-family}';
+		src:
+			url('../fonts/#{$url}.woff2') format('woff2'),
+			url('../fonts/#{$url}.woff') format('woff');
+		font-weight: #{$weight};
+		font-display: swap;
+		font-style: normal;
+	}
 }
 
-//Arimo
-//@include font-face(Arimo, Arimo-Regular, 400);
-//@include font-face(Arimo, Arimo-Medium, 500);
+//Inter
+@include font-face(Inter, Inter_Regular, 400);
+@include font-face(Inter, Inter_Medium, 500);
 //@include font-face(Arimo, Arimo-SemiBold, 700);
 //@include font-face(Arimo, Arimo-Bold, 700);
 //@include font-face(Arimo, Arimo-ExtraBold, 800);
