--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,5 +1,12 @@
 :root {
 	--color-white: #fff;
+	--color-orange-400: #fa523d;
+	--color-grey-100: #f1f1f1;
+	--color-grey-200: #ddd;
+	--color-grey-300: #dcdcdc;
+	--color-grey-400: #b1b1b1;
+	--color-grey-500: #6d6d6d;
+	--color-dark-600: #1d1d1d;
 	--color-black: #000;
-	--font-family-roboto: 'Roboto';
+	--font-main: 'Inter';
 }
