--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,17 +1,17 @@
 body {
-	font-family: var(--font-family-roboto), 'Arial', sans-serif;
+	font-family: var(--font-main), 'Arial', sans-serif;
 	font-weight: 400;
-	font-size: 16px;
+	font-size: 14px;
 	line-height: 1.3;
-	color: var(--color-black);
+	color: var(--color-grey-600);
 	background-color: var(--color-white);
 }
 
 .container {
 	margin: 0 auto;
-	padding: 0 15px;
+	padding: 0 45px;
 	width: 100%;
-	max-width: 1200px;
+	max-width: 1340px;
 }
 
 .wrapper {
@@ -27,13 +27,6 @@ body {
 
 .lock {
 	overflow: hidden;
-}
-
-.button {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	font-size: 20px;
 }
 
 .sr-only {
@@ -61,11 +54,40 @@ body {
 .logo {
 	display: inline-block;
 	width: 100%;
+	height: 28px;
+	max-width: 155px;
+
+	@include mq(sm) {
+		height: 22px;
+		max-width: 124px;
+	}
 
 	&__img {
 		width: 100%;
 		height: 100%;
 		object-fit: contain;
+	}
+}
+
+.title {
+	margin-bottom: 32px;
+	font-weight: 500;
+	font-size: 30px;
+	letter-spacing: 0.05rem;
+	color: var(--color-dark-600);
+
+	@include mq(sm) {
+		font-size: 24px;
+	}
+}
+
+.subtitle {
+	font-weight: 500;
+	font-size: 18px;
+	letter-spacing: 0.03rem;
+
+	@include mq(sm) {
+		font-size: 14px;
 	}
 }
 
