--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -5,7 +5,8 @@
 	--color-grey-200: #ddd;
 	--color-grey-300: #dcdcdc;
 	--color-grey-400: #b1b1b1;
-	--color-grey-500: #6d6d6d;
+	--color-grey-500: #989898;
+	--color-grey-600: #6d6d6d;
 	--color-dark-600: #1d1d1d;
 	--color-black: #000;
 	--font-main: 'Inter';
