--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,5 +6,5 @@
 // @import 'includes/utils';
 // @import 'includes/templates';
 @import 'global';
-// @import 'includes/components';
+@import 'includes/components';
 // @import 'includes/pages';
