--- a/src/styles/components/blocks/header/_header.scss
+++ b/src/styles/components/blocks/header/_header.scss
@@ -1,13 +1,79 @@
 .header {
-	position: relative;
-	top: 0;
-	right: 0;
-	left: 0;
-	z-index: 2;
+	border-bottom: 1px solid var(--color-grey-200);
+	height: 95px;
+	font-weight: 500;
 
-	&--fixed {
-		position: fixed;
-		transform: translateY(0);
-		transition: transform 0.35s ease-out;
+	@include mq(sm) {
+		height: 72px;
+	}
+
+	&__navigation {
+		display: flex;
+		height: 100%;
+	}
+
+	&__wrapper-logo {
+		@include flex;
+
+		padding: 8px 12px;
+		width: 100%;
+		height: 100%;
+		max-width: 255px;
+	}
+
+	&__inner {
+		@include flex(space-between);
+
+		padding: 8px 45px;
+		width: 100%;
+		gap: 24px;
+	}
+
+	&__item {
+		@include flex(flex-start);
+
+		gap: 10px;
+
+		&--contacts {
+			gap: 20px;
+		}
+	}
+
+	&__contact {
+		border-bottom: 1px solid var(--color-grey-200);
+		padding-bottom: 5px;
+	}
+
+	&--light {
+		color: var(--color-dark-600);
+
+		.header__wrapper-logo {
+			background-color: var(--color-grey-100);
+		}
+
+		.header__button {
+			color: var(--color-dark-600);
+			background-color: var(--color-grey-100);
+		}
+
+		.header__consultation {
+			color: var(--color-white);
+			background-color: var(--color-dark-600);
+		}
+	}
+
+	&--dark {
+		color: var(--color-white);
+
+		.header__consultation {
+			color: var(--color-dark-600);
+			background-color: var(--color-white);
+		}
+
+		.burger-button {
+			&__plate {
+				background-color: var(--color-white);
+			}
+		}
 	}
 }
