--- a/src/styles/components/ui/_button.scss
+++ b/src/styles/components/ui/_button.scss
@@ -1,9 +1,11 @@
 .button {
 	@include flex;
 
-	padding: 15px 30px;
-	font-size: 16px;
-	letter-spacing: 0.04rem;
+	border-radius: 1000px;
+	padding: 15px 20px;
+	font-weight: 500;
+	font-size: 12px;
+	letter-spacing: -0.03em;
 	color: var(--color-white);
 	gap: 4px;
 
@@ -13,5 +15,27 @@
 
 	&--light {
 		background-color: var(--color-orange-400);
+	}
+
+	&--with-point {
+		position: relative;
+		padding-left: 34px;
+
+		&::before {
+			content: '';
+			position: absolute;
+			left: 20px;
+			top: 50%;
+			border-radius: 50%;
+			width: 6px;
+			height: 6px;
+			background-color: var(--color-orange-400);
+			transform: translateY(-50%);
+		}
+	}
+
+	&__icon {
+		width: 14px;
+		height: 14px;
 	}
 }
