--- a/src/styles/includes/_components.scss
+++ b/src/styles/includes/_components.scss
@@ -4,4 +4,8 @@
 // Blocks
 @import '../components/blocks/header/header';
 @import '../components/blocks/header/burger-button';
+@import '../components/blocks/header/burger-menu';
+@import '../components/blocks/form';
+@import '../components/blocks/navigation-connection';
+@import '../components/blocks/socials';
 @import '../components/blocks/breadcrumbs';
