--- a/src/styles/includes/_mixins.scss
+++ b/src/styles/includes/_mixins.scss
@@ -2,6 +2,7 @@
 
 // @import './mixins/adaptive/values';
 @import '../mixins/mini';
+@import '../mixins/project';
 
 // @import './mixins/input';
 // @import './mixins/svg-color';
