--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -2,7 +2,8 @@ body {
 	font-family: var(--font-main), 'Arial', sans-serif;
 	font-weight: 400;
 	font-size: 14px;
-	line-height: 1.3;
+	line-height: 1.2;
+	letter-spacing: -0.02em;
 	color: var(--color-grey-600);
 	background-color: var(--color-white);
 }
@@ -69,9 +70,14 @@ body {
 	}
 }
 
+.title,
+.subtitle {
+	display: inline-block;
+	font-weight: 500;
+}
+
 .title {
 	margin-bottom: 32px;
-	font-weight: 500;
 	font-size: 30px;
 	letter-spacing: 0.05rem;
 	color: var(--color-dark-600);
