--- a/src/styles/components/blocks/_form.scss
+++ b/src/styles/components/blocks/_form.scss
@@ -1,50 +1,66 @@
 .form {
-	&__item {
-		width: 100%;
-		max-width: 400px;
-
-		&:not(:last-child) {
-			margin-bottom: 20px;
-		}
-	}
-
-	&__password {
-		position: relative;
-		width: 100%;
-	}
+	position: relative;
+	width: 100%;
+	font-size: 18px;
 
 	&__field {
-		border: 1px solid var(--color-black);
+		outline: 0;
+		border-bottom: 1px solid var(--color-grey-200);
+		padding: 0 8px 8px 0;
 		width: 100%;
-	}
+		transition: border-bottom-color 0.3s;
 
-	&__show {
-		position: absolute;
-		right: 10px;
-		top: 50%;
-		width: 24px;
-		height: 24px;
-		background-image: url('../img/icons/eye.svg');
-		transform: translateY(-50%);
-
-		@include bg-properties(contain);
-
-		&::before {
-			content: '';
-			position: absolute;
-			right: 0;
-			top: 0;
-			bottom: 0;
-			width: 2px;
-			background-color: var(--color-black);
-			opacity: 0;
-			transform: rotate(45deg);
-			transition: opacity 0.3s;
+		&--search {
+			padding-right: 36px;
 		}
 
-		&--active {
-			&::before {
-				opacity: 0.4;
+		&::placeholder {
+			color: var(--color-grey-500);
+			transition: color 0.3s;
+		}
+
+		&:focus {
+			border-bottom-color: var(--color-orange-400);
+		}
+
+		@media (any-hover: hover) {
+			&:hover {
+				&::placeholder {
+					color: var(--color-grey-600);
+				}
+			}
+		}
+	}
+
+	&__button-search {
+		position: absolute;
+		right: 0;
+		top: 50%;
+		outline: 0;
+		border: 1px solid transparent;
+		border-radius: 4px;
+		padding: 5px;
+		width: 28px;
+		height: 28px;
+		transform: translateY(-50%);
+		transition: border-color 0.3s;
+
+		svg {
+			width: 100%;
+			height: 100%;
+			stroke: var(--color-dark-600);
+			transition: stroke 0.3s;
+		}
+
+		&:focus-visible {
+			border-color: var(--color-orange-400);
+		}
+
+		@media (any-hover: hover) {
+			&:hover {
+				svg {
+					stroke: var(--color-orange-400);
+				}
 			}
 		}
 	}
