--- a/src/styles/components/blocks/header/_burger-button.scss
+++ b/src/styles/components/blocks/header/_burger-button.scss
@@ -7,6 +7,7 @@
 
 	position: relative;
 	z-index: 10;
+	outline: 0;
 	font-size: 12px;
 	gap: 10px;
 
@@ -51,11 +52,37 @@
 		}
 
 		&::before {
-			top: -5px;
+			top: -4px;
 		}
 
 		&::after {
-			bottom: -5px;
+			bottom: -4px;
+		}
+	}
+
+	&:focus {
+		.burger-button {
+			&__plate {
+				border-color: var(--color-orange-400);
+				background-color: transparent;
+			}
+		}
+	}
+
+	@media (any-hover: hover) {
+		&:hover {
+			.burger-button {
+				&__plate {
+					background-color: var(--color-orange-400);
+				}
+
+				&__line {
+					&::after,
+					&::before {
+						background-color: var(--color-white);
+					}
+				}
+			}
 		}
 	}
 
@@ -83,6 +110,16 @@
 				&::after {
 					bottom: unset;
 					transform: rotate(-45deg);
+				}
+			}
+		}
+
+		@media (any-hover: hover) {
+			&:hover {
+				.burger-button {
+					&__plate {
+						background-color: var(--color-grey-100);
+					}
 				}
 			}
 		}
