--- a/src/styles/components/blocks/header/_header.scss
+++ b/src/styles/components/blocks/header/_header.scss
@@ -8,8 +8,11 @@
 	}
 
 	&__navigation {
+		position: relative;
+		z-index: 5;
 		display: flex;
 		height: 100%;
+		background-color: var(--color-white);
 	}
 
 	&__wrapper-logo {
@@ -26,6 +29,7 @@
 
 		padding: 8px 45px;
 		width: 100%;
+		background-color: var(--color-white);
 		gap: 24px;
 	}
 
@@ -40,8 +44,7 @@
 	}
 
 	&__contact {
-		border-bottom: 1px solid var(--color-grey-200);
-		padding-bottom: 5px;
+		@include link-border-bottom;
 	}
 
 	&--light {
@@ -54,6 +57,12 @@
 		.header__button {
 			color: var(--color-dark-600);
 			background-color: var(--color-grey-100);
+
+			&--link {
+				svg {
+					stroke: var(--color-dark-600);
+				}
+			}
 		}
 
 		.header__consultation {
