refactor burger-menu

--- a/src/html/components/blocks/_header.html
+++ b/src/html/components/blocks/_header.html
@@ -38,15 +38,15 @@
                 </a>
             </div>
 
-            <button class="burger-button" aria-expanded="false" data-burger-button>
-                <span class="burger-button__text">Меню</span>
+            <button class="burger-button" aria-expanded="false" aria-controls="header-burger-menu" data-burger-button>
+                <span class="burger-button__text" aria-live="polite" data-burger-button-text>Меню</span>
                 <span class="burger-button__plate" aria-hidden>
                     <span class="burger-button__line"></span>
                 </span>
             </button>
         </div>
 
-        <div class="burger-menu" data-menu>
+        <div class="burger-menu" id="header-burger-menu" data-menu>
             <span class="burger-menu__title">Навигация</span>
             <form class="burger-menu__search form" action="#">
                 <label class="sr-only" for="burger-menu-search">
