add hover for button and refactor header + burger

--- a/src/html/components/blocks/_header.html
+++ b/src/html/components/blocks/_header.html
@@ -148,7 +148,7 @@
                         </li>
                     </ul>
                 </div>
-                <button class="burger-menu__button button button--light" type="button">
+                <button class="burger-menu__button button button--accent" type="button">
                     Записаться в салон
                     <svg class="button__icon">
                         <use xlink:href="img/sprite.svg#arrows-double">
