--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,6 +1,7 @@
 :root {
 	--color-white: #fff;
 	--color-orange-400: #fa523d;
+	--color-orange-600: #dc341f;
 	--color-grey-100: #f1f1f1;
 	--color-grey-200: #ddd;
 	--color-grey-300: #dcdcdc;
