--- a/src/styles/includes/_components.scss
+++ b/src/styles/includes/_components.scss
@@ -5,7 +5,12 @@
 @import '../components/blocks/header/header';
 @import '../components/blocks/header/burger-button';
 @import '../components/blocks/header/burger-menu';
+@import '../components/blocks/header/burger-mobile';
 @import '../components/blocks/form';
 @import '../components/blocks/navigation-connection';
 @import '../components/blocks/socials';
 @import '../components/blocks/breadcrumbs';
+
+// Cards
+@import '../components/cards/banner-card';
+@import '../components/cards/nav-card';
