--- a/src/html/components/blocks/header/_header.html
+++ b/src/html/components/blocks/header/_header.html
@@ -2,7 +2,6 @@
  light - светлый фон, темный текст;  
  dark - темный фон, светлый текст ; 
 -->
-<!-- TODO: убрать заголовки в хедере; нижняя граница у хедера; разбивка на файлы; концовка бургер-меню -->
 <header class="header header--light">
     <div class="overlay" data-menu-overlay aria-hidden></div>
     <nav class="header__navigation">
@@ -48,5 +47,6 @@
         </div>
 
         @include('./_burger-menu.html')
+        @include('./_menu-categories.html')
     </nav>
 </header>
