--- a/src/styles/components/blocks/header/burger/_burger-button.scss
+++ b/src/styles/components/blocks/header/burger/_burger-button.scss
@@ -70,6 +70,7 @@
 		.burger-button {
 			&__plate {
 				border-color: var(--color-orange-400);
+				color: var(--color-dark-600);
 				background-color: transparent;
 			}
 		}
