--- a/src/styles/components/blocks/_navigation-connection.scss
+++ b/src/styles/components/blocks/_navigation-connection.scss
@@ -1,15 +1,54 @@
 .navigation-connection {
 	display: flex;
-	flex-direction: column;
+	flex-flow: column wrap;
 	gap: 25px;
 
 	&__contacts {
 		display: flex;
 		flex-direction: column;
 		gap: 15px;
+
+		@include mq(md) {
+			flex: 1 1 auto;
+			flex-direction: row-reverse;
+			align-self: flex-start;
+			justify-content: flex-end;
+			gap: 5px;
+		}
+	}
+
+	&__contact {
+		flex: 1 1 100%;
 	}
 
 	&__link {
 		@include link-border-bottom;
+
+		white-space: nowrap;
+
+		@include mq(md) {
+			@include flex;
+
+			flex-direction: row-reverse;
+			border-bottom: 0;
+			border-radius: 12px;
+			padding: 15px;
+			text-align: center;
+			background-color: var(--color-grey-100);
+			gap: 5px;
+		}
+
+		@include mq(sm) {
+			border-radius: 8px;
+			padding: 12px;
+			font-size: 10px;
+		}
+	}
+
+	@include mq(md) {
+		flex-direction: row;
+		padding-right: 0;
+		width: 100%;
+		gap: 5px;
 	}
 }
