--- a/src/styles/components/blocks/header/_header.scss
+++ b/src/styles/components/blocks/header/_header.scss
@@ -1,5 +1,4 @@
 .header {
-	border-bottom: 1px solid var(--color-grey-200);
 	height: 95px;
 	font-weight: 500;
 
@@ -12,7 +11,16 @@
 		z-index: 5;
 		display: flex;
 		height: 100%;
-		background-color: var(--color-white);
+
+		&::before {
+			content: '';
+			position: absolute;
+			left: 0;
+			bottom: 0;
+			width: 100%;
+			height: 0.5px;
+			background-color: var(--color-grey-200);
+		}
 
 		@include mq(lg) {
 			padding: 0 20px;
@@ -71,10 +79,19 @@
 
 	&__contact {
 		@include link-border-bottom;
+
+		@include mq(sm) {
+			display: none;
+		}
 	}
 
 	&--light {
 		color: var(--color-dark-600);
+		background-color: var(--color-white);
+
+		.header__navigation {
+			background-color: var(--color-white);
+		}
 
 		.header__wrapper-logo {
 			background-color: var(--color-grey-100);
