--- a/src/styles/includes/_components.scss
+++ b/src/styles/includes/_components.scss
@@ -11,6 +11,7 @@
 @import '../components/blocks/header/nav-menu';
 @import '../components/blocks/form';
 @import '../components/blocks/navigation-connection';
+@import '../components/blocks/side-menu';
 @import '../components/blocks/socials';
 @import '../components/blocks/breadcrumbs';
 
