--- a/src/html/components/blocks/header/_header.html
+++ b/src/html/components/blocks/header/_header.html
@@ -29,7 +29,7 @@
             </div>
 
             <div class="header__item header__item--contacts">
-                <button class="header__consultation button button--with-point" type="button">
+                <button class="header__consultation button button--with-point" type="button" data-graph-path="consultation">
                     Консультация дизайнера
                 </button>
 
