--- a/src/html/components/blocks/header/_menu-categories.html
+++ b/src/html/components/blocks/header/_menu-categories.html
@@ -63,15 +63,17 @@
             </li>
         </ul>
         <form class="menu-categories__search form" action="#">
-            <label class="sr-only" for="nav-menu-search">
-                Введите, что вы хотите найти
-            </label>
-            <input class="form__field form__field--search" id="nav-menu-search" name="search" type="search" placeholder="Поиск по каталогу" required>
-            <button class="form__button-search" type="submit" aria-label="Найти">
-                <svg>
-                    <use xlink:href="img/sprite.svg#search">
-                </svg>
-            </button>
+            <div class="form__item">
+                <label class="sr-only" for="nav-menu-search">
+                    Введите, что вы хотите найти
+                </label>
+                <input class="form__field form__field--search" id="nav-menu-search" name="search" type="search" placeholder="Поиск по каталогу" required>
+                <button class="form__button-search" type="submit" aria-label="Найти">
+                    <svg>
+                        <use xlink:href="img/sprite.svg#search">
+                    </svg>
+                </button>
+            </div>
         </form>
     </div>
 </div>
