--- a/src/styles/components/blocks/_form.scss
+++ b/src/styles/components/blocks/_form.scss
@@ -1,7 +1,46 @@
 .form {
-	position: relative;
+	display: flex;
+	flex-direction: column;
 	width: 100%;
 	font-size: 18px;
+	gap: 40px;
+
+	&__header {
+		display: flex;
+		flex-direction: column;
+		gap: 10px;
+
+		@include mq(sm) {
+			gap: 8px;
+		}
+	}
+
+	&__text {
+		font-size: 14px;
+
+		p {
+			&:not(:last-child) {
+				margin-bottom: 8px;
+			}
+		}
+
+		@include mq(sm) {
+			font-size: 12px;
+			letter-spacing: -0.03em;
+		}
+	}
+
+	&__items {
+		display: flex;
+		flex-direction: column;
+		width: 100%;
+		gap: 30px;
+	}
+
+	&__item {
+		position: relative;
+		width: 100%;
+	}
 
 	&__field {
 		outline: 0;
@@ -85,5 +124,19 @@
 				color: var(--color-orange-400);
 			}
 		}
+	}
+
+	&__bottom {
+		font-size: 12px;
+		letter-spacing: -0.03em;
+
+		@include mq(sm) {
+			font-size: 10px;
+		}
+	}
+
+	a {
+		text-decoration: underline;
+		color: var(--color-dark-600);
 	}
 }
