--- a/src/styles/libs/_modal.scss
+++ b/src/styles/libs/_modal.scss
@@ -1,66 +1,113 @@
 .graph-modal {
 	--transition-time: 0.3s;
-	position: fixed;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	z-index: 1000;
-	overflow-x: hidden;
-	overflow-y: auto;
-	text-align: center;
-	background-color: rgba(var(--color-black), 0.7);
-	visibility: hidden;
-	cursor: pointer;
-	opacity: 0;
-	transition: opacity var(--transition-time), visibility var(--transition-time);
 
-	&::before {
-		display: inline-block;
-		height: 100%;
-		vertical-align: middle;
-		content: '';
-	}
+	position: fixed;
+	inset: 0;
+	z-index: 1000;
+	overflow: hidden auto;
+	text-align: center;
+	background-color: var(--color-white);
+	opacity: 0;
+	visibility: hidden;
+	transition:
+		opacity var(--transition-time),
+		visibility var(--transition-time);
+	cursor: pointer;
+
+	// &::before {
+	// 	content: '';
+	// 	display: inline-block;
+	// 	vertical-align: middle;
+	// 	height: 100%;
+	// }
 
 	&__container {
 		position: relative;
-		display: inline-block;
 		display: none;
-		width: 100%;
-		max-width: 1000px;
-		margin: 50px auto;
-		padding: 20px;
-		text-align: left;
+		justify-content: center;
 		vertical-align: middle;
-		background-color: var(--color-white);
 		border-radius: 10px;
+		padding: 20px;
+		width: 100%;
+		text-align: left;
+		background-color: var(--color-white);
 		cursor: default;
-
-		@media (max-width: 1024px) {
-			width: 90%;
-		}
 	}
 
 	&__close {
+		@include bg-properties(contain);
+
 		position: absolute;
-		top: 10px;
-		right: 10px;
-		width: 20px;
-		height: 20px;
-		padding: 0;
-		background-color: transparent;
-		background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512.001 512.001'%3E%3Cpath d='M284.286 256.002L506.143 34.144c7.811-7.811 7.811-20.475 0-28.285-7.811-7.81-20.475-7.811-28.285 0L256 227.717 34.143 5.859c-7.811-7.811-20.475-7.811-28.285 0-7.81 7.811-7.811 20.475 0 28.285l221.857 221.857L5.858 477.859c-7.811 7.811-7.811 20.475 0 28.285a19.938 19.938 0 0014.143 5.857 19.94 19.94 0 0014.143-5.857L256 284.287l221.857 221.857c3.905 3.905 9.024 5.857 14.143 5.857s10.237-1.952 14.143-5.857c7.811-7.811 7.811-20.475 0-28.285L284.286 256.002z'/%3E%3C/svg%3E");
+		right: 100px;
+		top: 30px;
+		border: 1px solid var(--color-grey-200);
+		border-radius: 1000px;
+		width: 52px;
+		height: 39px;
+		background-image: url('../img/sprite.svg#close');
+		background-size: 16px;
+
+		@include mq(lg) {
+			right: 30px;
+		}
+
+		@include mq(sm) {
+			width: 42px;
+			height: 32px;
+			background-size: 12px;
+		}
+	}
+
+	&__box {
+		margin: auto;
+		width: 100%;
+		max-width: 500px;
+	}
+
+	.form {
+		align-items: center;
+
+		&__header {
+			margin: 0 auto;
+			width: 100%;
+			max-width: 367px;
+			text-align: center;
+		}
+
+		&__title {
+			@include title(30px, -0.05em);
+
+			line-height: 1.1;
+
+			@include mq(sm) {
+				font-size: 24px;
+			}
+		}
+
+		&__bottom {
+			@include flex(center, center, column);
+
+			text-align: center;
+			gap: 12px;
+
+			@include mq(sm, min) {
+				width: 100%;
+				max-width: 258px;
+			}
+		}
 	}
 }
 
 .graph-modal.is-open {
-	visibility: visible;
 	opacity: 1;
-	transition: opacity var(--transition-time), visibility var(--transition-time);
+	visibility: visible;
+	transition:
+		opacity var(--transition-time),
+		visibility var(--transition-time);
 }
 
 .graph-modal__container.graph-modal-open {
-	display: inline-block;
+	display: flex;
 }
 
 .fade {
@@ -77,16 +124,18 @@
 }
 
 .fadeInUp {
-	transform: translateY(-100px);
 	opacity: 0;
+	transform: translateY(-100px);
 }
 
 .fadeInUp,
 .fadeInUp.animate-open {
-	transition: transform var(--transition-time), opacity var(--transition-time);
+	transition:
+		transform var(--transition-time),
+		opacity var(--transition-time);
 }
 
 .fadeInUp.animate-open {
-	transform: translateY(0);
 	opacity: 1;
+	transform: translateY(0);
 }
