refactor modal-consultation

--- a/src/html/components/blocks/header/_header.html
+++ b/src/html/components/blocks/header/_header.html
@@ -29,7 +29,8 @@
             </div>
 
             <div class="header__item header__item--contacts">
-                <button class="header__consultation button button--with-point" type="button" data-graph-path="consultation">
+                <button class="header__consultation button button--dark" type="button" data-graph-path="consultation">
+                    <span class="button__point" aria-hidden></span>
                     Консультация дизайнера
                 </button>
 
