--- a/src/styles/libs/_modal.scss
+++ b/src/styles/libs/_modal.scss
@@ -14,21 +14,14 @@
 		visibility var(--transition-time);
 	cursor: pointer;
 
-	// &::before {
-	// 	content: '';
-	// 	display: inline-block;
-	// 	vertical-align: middle;
-	// 	height: 100%;
-	// }
-
 	&__container {
 		position: relative;
 		display: none;
 		justify-content: center;
 		vertical-align: middle;
 		border-radius: 10px;
-		padding: 20px;
 		width: 100%;
+		height: 100%;
 		text-align: left;
 		background-color: var(--color-white);
 		cursor: default;
@@ -40,12 +33,27 @@
 		position: absolute;
 		right: 100px;
 		top: 30px;
+		outline: 0;
 		border: 1px solid var(--color-grey-200);
 		border-radius: 1000px;
 		width: 52px;
 		height: 39px;
 		background-image: url('../img/sprite.svg#close');
 		background-size: 16px;
+		transition:
+			background-color 0.3s,
+			border-color 0.3s;
+
+		&:focus-visible {
+			border-color: var(--color-orange-400);
+		}
+
+		@media (any-hover: hover) {
+			&:hover {
+				border-color: transparent;
+				background-color: var(--color-grey-100);
+			}
+		}
 
 		@include mq(lg) {
 			right: 30px;
@@ -60,6 +68,7 @@
 
 	&__box {
 		margin: auto;
+		padding: 20px 0;
 		width: 100%;
 		max-width: 500px;
 	}
